# zephyr-openplc-pretest

./: CMakeLists.txt  README.md  prj.conf
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  rpi_4b.overlay  rpi_pico2_rp2350a_m33_w.overlay  xiao_nrf54l15_nrf54l15_cpuapp.overlay
src/: main.c
src/core/: LOCATED_VARIABLES.h  POUS.c  POUS.h  Res0.c  VARIABLES.csv  glueVars.cpp  utils.cpp
src_onoff/: main.c
src_onoff/core/: LOCATED_VARIABLES.h  POUS.c  POUS.h  Res0.c  VARIABLES.csv  glueVars.cpp
src_onoff/core/lib/: iec_std_functions.h  iec_std_lib.h
